# Tender-Scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.ipynb_checkpoints/: captcha_recognition-checkpoint.ipynb
app/: captcha_solver.py  cli.py  constants.py  helper.py  main.py  spider.py
app/utils/: aws.py  driver.py  get_proxies.py
sakbunderan/: 1001fonts-sakbunderan-eula.txt
