[tool.poetry]
name = "nextgeniot-govt-tender-portal"
version = "0.1.0"
description = ""
authors = ["Subhomoy Roy Choudhury <subhomoyrchoudhury@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.3"
bs4 = "^0.0.1"
rich = "^13.3.3"
requests = "^2.28.2"
easyocr = "^1.6.2"
opencv-python = "4.5.5.64"
boto3 = "^1.26.108"
webdriver-manager = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
